<resources>
    <string name="app_name">fundamentalAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Fragment String Start-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="hello_home_fragment">Hello Ini Home Fragment</string>
    <string name="to_category">Ke fragment Category</string>
    <string name="question_coach">Siapa pelatih tersukses Machester United?</string>
    <string name="sir_alex_ferguson">Sir Alex Ferguson</string>
    <string name="jose_mourinho">Jose Mourinho</string>
    <string name="louis_van_gaal">Louis Van Gaal</string>
    <string name="david_moyes">David Moyes</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
    <string name="learn_navigation">Learn Navigation</string>
    <string name="learn_fragment">Learn Fragment</string>
    <!-- Fragment String End -->

    <!-- Navigation String Start-->
    <string name="hello_home_fragment_navigation">Hello Ini Home Fragment</string>
    <string name="to_profile_navigation">Ke Activity Profile Activity</string>
    <string name="to_category_navigation">Ke fragment Category</string>
    <string name="this_profile_navigation">Ini activity Profile</string>
    <string name="this_category_navigation">Ini fragment Category</string>
    <string name="category_lifestyle_navigation">Ke fragment Lifestyle</string>
    <string name="category_sport">Ke fragment Sport</string>
    <string name="category_name_navigation">Category Name</string>
    <string name="category_description_navigation">Category Description</string>
    <string name="to_home">Ke fragment Home</string>
    <!-- Navigation String End-->

    <!-- AppBar String -->
    <string name="menu_1">Menu 1</string>
    <string name="this_activity_navigation">Ini adalah menu activity</string>
    <string name="menu_2">Menu 2</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
        "Bold, graphic, intentional.\n\n"
        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"
        "Motion provides meaning.\n\n"
        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
        "3D world.\n\n"
        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"
        "Light and shadow.\n\n"
        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
        "Resting elevation.\n\n"
        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"
        "Component elevations.\n\n"
        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
        "Responsive elevation and dynamic elevation offsets.\n\n"
        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"
        "Avoiding elevation interference.\n\n"
        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="learn_appbar">Learn AppBar</string>
    <string name="searchbar_hint">Masukkan kata</string>
    <string name="learn_navigation_drawer">Learn Navigation Drawer</string>
    <string name="fundamental_android">FUNDAMENTAL ANDROID</string>
    <string name="title_activity_main_navigation_drawer">MainActivityNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="learn_tab_layout_view_pager_2">Learn Tab Layout View Pager 2</string>
    <!-- AppBar String End -->

    <!-- Tab layout string start -->
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Profile</string>
    <string name="tab_text_3">Setting</string>
    <string name="content_tab_home">Welcome Home</string>
    <string name="content_tab_profile">Change your Profile here</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="learn_background_thread">Learn Background Thread</string>
    <!-- Tab layout string end -->

    <!-- Background thread string start -->
    <string name="start_task">Start Task</string>
    <string name="status">Status</string>
    <string name="hidden_text">Now you see me!</string>
    <string name="task_completed">Task Completed</string>
    <string name="compressing">Compresssing %d %%</string>
    <!-- Background thread string end -->

    <!-- API parsing string start -->
    <string name="quote">When do you think people die? When they are shot through the heart by the bullet of a pistol? No. When they are ravaged by an incurable disease? No. When they drink a soup made from a poisonous mushroom!? No! It’s when… they are FORGOTTEN.</string>
    <string name="author">- Dr. Hiluluk</string>
    <string name="show_list_quotes">Show me list of quotes</string>
    <string name="learn_parsing">Learn Parsing</string>
    <!-- API parsing string end -->

    <!-- ViewModel String Start -->
    <string name="width">Lebar</string>
    <string name="result">Hasil</string>
    <string name="calculate">Hitung</string>
    <string name="height">Tinggi</string>
    <string name="length">Panjang</string>
    <string name="learn_view_model">Learn View Model</string>
    <string name="learn_live_data">Learn Live Data</string>
    <!-- ViewModel String End -->

    <!-- LiveData String Start -->
    <string name="seconds">%d seconds elapsed</string>
    <string name="hello_dicoding">Hello Dicoding!</string>
    <!-- LiveData String End -->

    <!-- Test String Start-->
    <string name="calculate_volume">Hitung Volume</string>
    <string name="calculate_surface_area">Hitung Luas Area</string>
    <string name="calculate_circumference">Hitung Keliling</string>
    <string name="save">Simpan</string>
    <!-- Test String End -->

</resources>