<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".learnfragment.fragment.OptionDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/question_coach" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_option"
        android:orientation="vertical" >

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_saf"
            android:layout_marginBottom="16dp"
            android:text="@string/sir_alex_ferguson" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_mou"
            android:text="@string/jose_mourinho"
            android:layout_marginBottom="16dp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_moyes"
            android:layout_marginBottom="16dp"
            android:text="@string/david_moyes" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_lvg"
            android:layout_marginBottom="16dp"
            android:text="@string/louis_van_gaal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_close"
                style="?android:buttonBarButtonStyle"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="0.5"
                android:text="@string/close" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_choose"
                style="?android:buttonBarButtonStyle"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="0.5"
                android:text="@string/choose" />

        </LinearLayout>

    </RadioGroup>

</LinearLayout>